# soundmess

./: configure.ac  configure.in
src/: AODevice.cc  AODevice.h  Makefile.am  buf.h  buf.hh  ftimer.h  main.cc
