AC_INIT(soundmess)

PACKAGE=soundmess
VERSION=0.0.1

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AC_PROG_CXX
AC_CHECK_FUNCS([gettimeofday])
AC_CHECK_HEADERS([stdint.h unistd.h])
AC_CHECK_HEADERS([sys/time.h])
AC_CHECK_HEADERS([unistd.h])
AC_CHECK_HEADER_STDBOOL
AC_FUNC_MALLOC
AC_PROG_CC
AC_TYPE_INT16_T
AC_TYPE_INT8_T
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T

AC_OUTPUT(Makefile src/Makefile)
