
AC_INIT(soundmess, 0.1)
AC_CONFIG_HEADERS([src/config.h])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE

AC_PROG_INSTALL
AM_PROG_LIBTOOL
AC_PROG_RANLIB

AC_LANG([C++])

AC_PROG_CXX

AX_CXX_COMPILE_STDCXX_11(noext, mandatory)


# Libraries
AC_CHECK_LIB(ao, ao_initialize())

# Functions
AC_CHECK_FUNCS([gettimeofday])
AC_CHECK_FUNCS([modf])
AC_FUNC_MALLOC

# Headers
AC_CHECK_HEADERS([stdint.h unistd.h])
AC_CHECK_HEADERS([sys/time.h])
AC_CHECK_HEADERS([unistd.h])
AC_CHECK_HEADERS([ao/ao.h])
AC_CHECK_HEADER_STDBOOL

# Types
AC_TYPE_INT16_T
AC_TYPE_INT8_T
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T

AC_OUTPUT(Makefile src/Makefile)
